# AuraStream

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  samconfig.toml  template.yaml  twitter_thread.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  terraform-deploy.yml  test-and-quality.yml  test.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: AuraStream System Design Document (SDD).md  AuraStream_   API Specification Document (API Spec).md  AuraStream_ Deployment & Operations Guide (DevOps Guide).md  AuraStream_API_Reference.md  AuraStream_Architecture_Reference.md  AuraStream_Business_Analysis.md  AuraStream_Development_Checklist.md  AuraStream_Development_Guide.md  AuraStream_LLM_Guide_and_Implementation_Plan.md  AuraStream_Monitoring_Observability_Guide.md  AuraStream_Operations_Runbook.md  AuraStream_Project_Status_Update.md  AuraStream_Security_Compliance_Guide.md  AuraStream_Terraform_Cloud_Deployment_Guide.md  AuraStream_Testing_Strategy_Guide.md  TESTING.md
events/: async_event.json  health_event.json  status_event.json  sync_event.json
src/: __init__.py
src/cache/: __init__.py  sentiment_cache.py
src/handlers/: __init__.py  async_handler.py  health_handler.py  process_document_handler.py  status_handler.py  sync_handler.py  update_job_status_handler.py
src/models/: __init__.py  request_models.py  response_models.py
src/monitoring/: __init__.py  metrics.py
src/pii/: __init__.py  pii_detector.py
src/utils/: __init__.py  aws_clients.py  constants.py  json_encoder.py  validators.py
terraform/: README.md  iam.tf  main.tf  monitoring.tf  outputs.tf  security.tf  variables.tf  versions.tf
terraform/workspaces/: dev.tfvars  prod.tfvars  staging.tfvars
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_complete_workflow.py
tests/fixtures/: __init__.py  aws_fixtures.py  data_fixtures.py
tests/integration/: __init__.py  test_api_integration.py  test_aws_services_integration.py  test_lambda_integration.py
tests/performance/: __init__.py  test_load_performance.py  test_performance.py
tests/unit/: __init__.py  test_async_handler.py  test_aws_clients.py  test_cache.py  test_health_handler.py  test_metrics.py  test_models.py  test_pii_detector.py  test_process_document_handler.py  test_sentiment_cache.py  test_status_handler.py  test_sync_handler.py  test_update_job_status_handler.py  test_utils.py
